src/test/deca/syntax/invalid/crochets1.deca
//Description
//    Vérifier la considération des crochets
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
while(a==3);}
}
